[package]
name = "proxy-info"
version = "0.1.2"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.3"
